# docker-models

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test.py
app/: main.py
