[tool.poetry]
name = "training-service"
version = "0.1.0"
description = ""
authors = ["Jan Scholz <jscholz.contact@gmail.com>"]
readme = "README.md"
packages = [{include = "training_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
sklearn = "^0.0.post5"
numpy = "^1.24.3"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
docker = "^6.1.2"

[tool.poetry.group.dev.dependencies]
pandas = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
